# clicord

./: .gitignore  Cargo.toml  Dockerfile  README.md  swallow.yaml
.github/workflows/: release.yml
crates/client/: Cargo.toml
crates/client/src/: app.rs  input.rs  layout.rs  main.rs  media.rs  net.rs  session.rs  ui.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  db.rs  http.rs  hub.rs  main.rs  ws.rs
scripts/: build-release.sh
