[workspace]
resolver = "2"
members = ["crates/protocol", "crates/server", "crates/client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dristeck"]

# Centralised dependency versions so the crates stay in lockstep.
[workspace.dependencies]
protocol = { path = "crates/protocol" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# server
axum = { version = "0.7", features = ["ws"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
] }
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
dashmap = "6"

# client
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 2
