[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "clicord"
path = "src/main.rs"

[dependencies]
protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures-util.workspace = true
chrono.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
dirs.workspace = true
image.workspace = true
