[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "clicord-server"
path = "src/main.rs"

[dependencies]
protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures-util.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
sqlx.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
dashmap.workspace = true
